Twenty Thirteen: Fix issues with theme's Gutenberg support.
A handful of issues were missed in Twenty Thirteen's Gutenberg support, added in #45041. This commit includes the following fixes:

* Center text and bullets in list-based widget blocks, when block itself is centered.
* Prevent full and wide aligned blocks from getting wider than Twenty Thirteen's design.
* Prevent wide aligned blocks from getting too wide, as they can seem out of proportion with the full aligned blocks.
* Make sure full and wide blocks display at the correct width in the editor.
* Include non "image" variations of the Cover block classes `.wp-block-cover` and `.wp-block-cover-text` in the styles.
* Make sure wide and full aligned Table blocks span the available width on the front end.
* Add spacing underneath the Media & Text block, but make sure the final paragraph in the block doesn't add too much space.
* Simplify selectors used to set editor width to just `.wp-block`.


Props pento, davidakennedy.
Fixes #45242.


Built from https://develop.svn.wordpress.org/branches/5.0@43872


git-svn-id: http://core.svn.wordpress.org/branches/5.0@43701 1a063a9b-81f0-0310-95a4-ce76da25c4cd

--- a/wp-content/themes/twentythirteen/css/editor-blocks.css
+++ b/wp-content/themes/twentythirteen/css/editor-blocks.css
@@ -52,12 +52,19 @@ Description: Used to style Gutenberg Blocks in the editor.
 3.0 General Block Styles
 --------------------------------------------------------------*/
 
-/* Main column width */
+/* Main content width */
 
-.edit-post-visual-editor .editor-post-title__block,
-.edit-post-visual-editor .editor-default-block-appender,
-.edit-post-visual-editor .editor-block-list__block {
-	max-width: 634px; /* 604 + 30 for editor block padding */
+.wp-block {
+	max-width: 634px; /* 604px + 30px to account for padding */
+}
+
+.wp-block.alignwide,
+.wp-block.alignfull {
+	max-width: inherit;
+}
+
+[class^="wp-block-"] .wp-block {
+	max-width: 100%;
 }
 
 /* Link styles */
@@ -230,9 +237,10 @@ p.has-drop-cap:not(:focus)::first-letter {
 	font-size: 18px;
 }
 
-/* Cover Image */
+/* Cover */
 
-.edit-post-visual-editor .editor-block-list__block .wp-block-cover-image p.wp-block-cover-image-text {
+.edit-post-visual-editor .editor-block-list__block .wp-block-cover-image p.wp-block-cover-image-text,
+.edit-post-visual-editor .editor-block-list__block .wp-block-cover p.wp-block-cover-text {
 	font-size: 32px;
 	line-height: 1.25;
 }
@@ -339,9 +347,24 @@ p.has-drop-cap:not(:focus)::first-letter {
 	margin-right: auto;
 }
 
+/* Media & Text */
+
+.wp-block-media-text *:last-child {
+	margin-bottom: 0;
+}
+
 /*--------------------------------------------------------------
 7.0 Blocks - Widgets
 --------------------------------------------------------------*/
+
+/* Archives, Categories & Latest Posts */
+
+[data-align="center"] .wp-block-archives ul,
+[data-align="center"] .wp-block-categories ul,
+[data-align="center"] .wp-block-latest-posts ul {
+	list-style-position: inside;
+	text-align: center;
+}
 
 /* Latest Comments */
 
